Increase 3D model spacing by 1.3x and fix scroll arrow animation

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ body {
   position: relative;
   z-index: 2;
   opacity: 0.9;
-  margin: 0 80px;
+  margin: 0 104px;
   flex-shrink: 0;
 }
 
